# AoC2025

./: Cargo.toml
src/01/: a.rs  b.rs  main.rs
src/02/: a.rs  b.rs
src/03/: a.rs  b.rs  main.rs
src/04/: a.rs  b.rs  main.rs
src/05/: a.rs  b.rs  main.rs
