[package]
name = "AoC2025"
version = "0.1.0"
edition = "2024"

[dependencies]



[[bin]]
name = "day1"
path = "./src/01/main.rs"

[[bin]]
name = "day2"
path = "./src/02/main.rs"

[[bin]]
name = "day3"
path = "./src/03/main.rs"

[[bin]]
name = "day4"
path = "./src/04/main.rs"

[[bin]]
name = "day5"
path = "./src/05/main.rs"
